Pending files data-table overflow problem fixed. loader hide set.

--- a/invoice-frontend/src/app/pages/components/dashboard/dashboard-files-list/dashboard-files-list.component.scss
+++ b/invoice-frontend/src/app/pages/components/dashboard/dashboard-files-list/dashboard-files-list.component.scss
@@ -82,3 +82,8 @@
 .cust-padding {
     padding-bottom: 50px;
 }
+
+.table-responsive {
+    overflow-x: unset !important;
+    margin-bottom: 50PX !important;
+}
